Version 0.2
* added functions to identify and strip white spaces
* implemented all remaining json_new_* functions

Version 0.1
* The starting point
